refactor: Drops commons-io from deployment time dependencies (#22785)
Removes one more third party dependency. Mostly replaced with modern JDK methods.

Refernces #22778