@@ -16,26 +16,31 @@
 package com.vaadin.flow.server.frontend;
 
 import java.io.File;
+import java.io.FileFilter;
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystems;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.PathMatcher;
 import java.nio.file.SimpleFileVisitor;
+import java.nio.file.StandardCopyOption;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.BiPredicate;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import org.apache.commons.io.FileUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import com.vaadin.flow.internal.StringUtil;
 
 /**
  * Utility class for file I/O operations, including conditional file writing,
@@ -44,6 +49,276 @@ import org.slf4j.LoggerFactory;
  * For internal use only. May be renamed or removed in a future release.
  */
 public class FileIOUtils {
+
+    /**
+     * Deletes file if it exists and eats exceptions.
+     *
+     * Note, this is an internal helper method, use only from framework code.
+     * 
+     * @param file
+     *            to be deleted
+     * @return true if succeeded
+     */
+    static boolean deleteFileQuietly(File file) {
+        if (file == null) {
+            return false;
+        }
+        try {
+            return file.delete();
+        } catch (final Exception ignored) {
+            return false;
+        }
+    }
+
+    /**
+     * Reads the content from given URL into UTF 8 String.
+     * 
+     * Note, this is an internal helper method, use only from framework code.
+     * 
+     * @param url
+     *            the URL to read
+     * @return string from the content
+     * @throws IOException
+     */
+    static String urlToString(URL url) throws IOException {
+        try (InputStream input = url.openStream()) {
+            return StringUtil.toUTF8String(input);
+        }
+    }
+
+    /**
+     * Copies a directory recursively.
+     *
+     * @param source
+     *            the source directory
+     * @param target
+     *            the target directory
+     * @throws IOException
+     *             if an I/O error occurs
+     */
+    public static void copyDirectory(File source, File target)
+            throws IOException {
+        copyDirectory(source.toPath(), target.toPath(), null);
+    }
+
+    /**
+     * Copies a directory recursively with a file filter.
+     *
+     * @param source
+     *            the source directory
+     * @param target
+     *            the target directory
+     * @param filter
+     *            the file filter to apply, or null to copy all files
+     * @throws IOException
+     *             if an I/O error occurs
+     */
+    public static void copyDirectory(File source, File target,
+            FileFilter filter) throws IOException {
+        copyDirectory(source.toPath(), target.toPath(), filter);
+    }
+
+    private static void copyDirectory(Path source, Path target,
+            FileFilter filter) throws IOException {
+        Files.walkFileTree(source, new SimpleFileVisitor<Path>() {
+            @Override
+            public FileVisitResult preVisitDirectory(Path dir,
+                    BasicFileAttributes attrs) throws IOException {
+                if (filter != null && !filter.accept(dir.toFile())) {
+                    return FileVisitResult.SKIP_SUBTREE;
+                }
+                Path targetDir = target.resolve(source.relativize(dir));
+                Files.createDirectories(targetDir);
+                return FileVisitResult.CONTINUE;
+            }
+
+            @Override
+            public FileVisitResult visitFile(Path file,
+                    BasicFileAttributes attrs) throws IOException {
+                if (filter == null || filter.accept(file.toFile())) {
+                    Files.copy(file, target.resolve(source.relativize(file)),
+                            StandardCopyOption.REPLACE_EXISTING);
+                }
+                return FileVisitResult.CONTINUE;
+            }
+        });
+    }
+
+    /**
+     * Deletes a file or directory recursively. Throws an exception if the
+     * deletion fails.
+     *
+     * @param file
+     *            the file or directory to delete
+     * @throws IOException
+     *             if an I/O error occurs
+     */
+    public static void delete(File file) throws IOException {
+        if (!file.exists()) {
+            return;
+        }
+        Path path = file.toPath();
+        if (Files.isDirectory(path)) {
+            Files.walkFileTree(path, new SimpleFileVisitor<Path>() {
+                @Override
+                public FileVisitResult visitFile(Path file,
+                        BasicFileAttributes attrs) throws IOException {
+                    Files.delete(file);
+                    return FileVisitResult.CONTINUE;
+                }
+
+                @Override
+                public FileVisitResult postVisitDirectory(Path dir,
+                        IOException exc) throws IOException {
+                    Files.delete(dir);
+                    return FileVisitResult.CONTINUE;
+                }
+            });
+        } else {
+            Files.delete(path);
+        }
+    }
+
+    /**
+     * Gets the user's home directory.
+     *
+     * @return the user's home directory
+     */
+    static File getUserDirectory() {
+        return new File(System.getProperty("user.home"));
+    }
+
+    /**
+     * Lists all files in a directory with the specified extensions,
+     * recursively.
+     *
+     * @param directory
+     *            the directory to search
+     * @param extensions
+     *            the file extensions to include (without dots)
+     * @param recursive
+     *            whether to search recursively
+     * @return a list of files matching the criteria
+     * @throws IOException
+     *             if an I/O error occurs
+     */
+    static List<File> listFiles(File directory, String[] extensions,
+            boolean recursive) throws IOException {
+        List<File> result = new ArrayList<>();
+        if (!directory.isDirectory()) {
+            return result;
+        }
+
+        List<String> extensionList = extensions != null
+                ? Arrays.asList(extensions)
+                : List.of();
+
+        try (Stream<Path> stream = recursive ? Files.walk(directory.toPath())
+                : Files.list(directory.toPath())) {
+            stream.filter(Files::isRegularFile).filter(path -> {
+                if (extensionList.isEmpty()) {
+                    return true;
+                }
+                String fileName = path.getFileName().toString();
+                int lastDot = fileName.lastIndexOf('.');
+                if (lastDot == -1) {
+                    return false;
+                }
+                String extension = fileName.substring(lastDot + 1);
+                return extensionList.contains(extension);
+            }).forEach(path -> result.add(path.toFile()));
+        }
+
+        return result;
+    }
+
+    /**
+     * Compares the content of two InputStreams.
+     *
+     * @param input1
+     *            the first InputStream
+     * @param input2
+     *            the second InputStream
+     * @return true if the content is equal, false otherwise
+     * @throws IOException
+     *             if an I/O error occurs
+     */
+    static boolean contentEquals(InputStream input1, InputStream input2)
+            throws IOException {
+        return Arrays.equals(input1.readAllBytes(), input2.readAllBytes());
+    }
+
+    /**
+     * Closes a resource quietly without throwing an exception.
+     *
+     * @param closeable
+     *            the resource to close
+     */
+    static void closeQuietly(AutoCloseable closeable) {
+        if (closeable != null) {
+            try {
+                closeable.close();
+            } catch (Exception ignored) {
+                // Ignore
+            }
+        }
+    }
+
+    /**
+     * Removes the extension from a filename.
+     *
+     * @param filename
+     *            the filename
+     * @return the filename without extension
+     */
+    public static String removeExtension(String filename) {
+        if (filename == null) {
+            return null;
+        }
+        int lastDot = filename.lastIndexOf('.');
+        int lastSeparator = Math.max(filename.lastIndexOf('/'),
+                filename.lastIndexOf('\\'));
+        if (lastDot > lastSeparator && lastDot > 0) {
+            return filename.substring(0, lastDot);
+        }
+        return filename;
+    }
+
+    /**
+     * Checks if a string matches a wildcard pattern.
+     *
+     * @param text
+     *            the text to check
+     * @param pattern
+     *            the wildcard pattern (* and ? are supported)
+     * @return true if the text matches the pattern, false otherwise
+     */
+    public static boolean wildcardMatch(String text, String pattern) {
+        if (text == null || pattern == null) {
+            return false;
+        }
+        String regex = pattern.replace(".", "\\.").replace("*", ".*")
+                .replace("?", ".");
+        return Pattern.matches(regex, text);
+    }
+
+    /**
+     * Checks if a directory is empty.
+     *
+     * @param directory
+     *            the directory to check
+     * @return true if the directory is empty, false otherwise
+     * @throws IOException
+     *             if an I/O error occurs
+     */
+    static boolean isEmptyDirectory(Path directory) throws IOException {
+        if (!Files.isDirectory(directory)) {
+            return false;
+        }
+        try (Stream<Path> stream = Files.list(directory)) {
+            return stream.findAny().isEmpty();
+        }
+    }
 
     private FileIOUtils() {
         // Utils only
@@ -92,8 +367,8 @@ public class FileIOUtils {
         log().debug("writing to file '{}' because content does not match",
                 file);
 
-        FileUtils.forceMkdirParent(file);
-        FileUtils.writeStringToFile(file, content, StandardCharsets.UTF_8);
+        file.getParentFile().mkdirs();
+        Files.writeString(file.toPath(), content);
         return true;
     }
 
@@ -105,7 +380,7 @@ public class FileIOUtils {
         if (!file.exists()) {
             return null;
         }
-        return FileUtils.readFileToString(file, StandardCharsets.UTF_8);
+        return Files.readString(file.toPath());
     }
 
     /**
